--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,45 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
+
+        <!-- MyBatis-Plus 核心依赖（Spring Boot 版） -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.5</version> <!-- 推荐使用稳定版，可根据需求升级 -->
+        </dependency>
+
+        <!-- MySQL 驱动（如果使用MySQL数据库，其他数据库替换对应驱动） -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- PageHelper 分页插件核心依赖（Spring Boot 版） -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.4.7</version> <!-- 推荐稳定版，适配 Spring Boot 2.x/3.x -->
+        </dependency>
+
+
+        <!-- javax.annotation.Resource 依赖（JDK 9+ 需单独引入） -->
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>2.1.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- 若项目是 Spring Boot 1.x/2.x 且想兼容旧 javax 包，可加： -->
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 	</dependencies>
 
 	<build>
