--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.5",
     "element-plus": "^2.4.4",
     "pinia": "^2.1.7",
+    "vite": "^7.3.1",
     "vue": "^3.3.13",
     "vue-router": "^4.2.5"
   },
