--- a/pom.xml
+++ b/pom.xml
@@ -129,26 +129,26 @@
         </dependency>
 
         <!-- MyBatis-Plus 核心依赖（Spring Boot 版） -->
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.5.5</version> <!-- 推荐使用稳定版，可根据需求升级 -->
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.baomidou</groupId>-->
+<!--            <artifactId>mybatis-plus-boot-starter</artifactId>-->
+<!--            <version>3.5.7</version> &lt;!&ndash; 推荐使用稳定版，可根据需求升级 &ndash;&gt;-->
+<!--        </dependency>-->
 
         <!-- MySQL 驱动（如果使用MySQL数据库，其他数据库替换对应驱动） -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.33</version>
-            <scope>runtime</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <version>8.0.33</version>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
 
         <!-- PageHelper 分页插件核心依赖（Spring Boot 版） -->
-        <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper-spring-boot-starter</artifactId>
-            <version>1.4.7</version> <!-- 推荐稳定版，适配 Spring Boot 2.x/3.x -->
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.pagehelper</groupId>-->
+<!--            <artifactId>pagehelper-spring-boot-starter</artifactId>-->
+<!--            <version>1.4.7</version> &lt;!&ndash; 推荐稳定版，适配 Spring Boot 2.x/3.x &ndash;&gt;-->
+<!--        </dependency>-->
 
 
         <!-- javax.annotation.Resource 依赖（JDK 9+ 需单独引入） -->
@@ -159,13 +159,13 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- 若项目是 Spring Boot 1.x/2.x 且想兼容旧 javax 包，可加： -->
+<!--        &lt;!&ndash; 若项目是 Spring Boot 1.x/2.x 且想兼容旧 javax 包，可加： &ndash;&gt;-->
 
-        <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>javax.annotation</groupId>-->
+<!--            <artifactId>javax.annotation-api</artifactId>-->
+<!--            <version>1.3.2</version>-->
+<!--        </dependency>-->
 	</dependencies>
 
 	<build>
