--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "vue-cli-service serve --no-deprecation",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "start": "vue-cli-service serve --no-deprecation --no-warnings"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
